--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,3 +63,6 @@ jobs:
         run: |
           docker build -t ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }} .
           docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }}  
+
+      - name: Update the kubeconfig
+        run: sed -i 's@CONTAINER_IMAGE@'"${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }}"'@' deployment.yml    
