--- a/deployment.yml
+++ b/deployment.yml
@@ -20,7 +20,7 @@ spec:
         app.kubernetes.io/name: app-2048
     spec:
       containers:
-      - image: CONTAINER_IMAGE
+      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
         imagePullPolicy: Always
         name: app-2048
         ports:
@@ -36,7 +36,7 @@ spec:
     - port: 80
       targetPort: 80
       protocol: TCP
-  type: LoadBalancer
+  type: NodePort
   selector:
     app.kubernetes.io/name: app-2048
 ---
