--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,9 @@ jobs:
 
       - name: Deploy the application
         run: |
-         
-          aws eks --region us-east-1 update-kubeconfig --name basic-cluster 
-          kubectl delete -f deployment.yml
+          echo $REPOSITORY
+          DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+          echo $DOCKER
+        #  aws eks --region us-east-1 update-kubeconfig --name basic-cluster 
+        #  kubectl delete -f deployment.yml
             
