--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,12 +63,15 @@ jobs:
         run: |
           docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
           docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}  
-
-      - name: Deploy the application
-        run: |
           echo "$REPOSITORY"
           DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
           echo "$DOCKER"
+
+    #  - name: Deploy the application
+    #    run: |
+    #      echo "$REPOSITORY"
+    #      DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+    #      echo "$DOCKER"
         #  aws eks --region us-east-1 update-kubeconfig --name basic-cluster 
         #  kubectl delete -f deployment.yml
             
