--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,11 +67,13 @@ jobs:
           DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
           echo "$DOCKER"
 
-    #  - name: Deploy the application
-    #    run: |
-    #      echo "$REPOSITORY"
-    #      DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
-    #      echo "$DOCKER"
-        #  aws eks --region us-east-1 update-kubeconfig --name basic-cluster 
-        #  kubectl delete -f deployment.yml
-            
+      - name: Deploy the application
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: node-app 
+          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
+        run: |
+          DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+          sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
+          aws eks --region us-east-1 update-kubeconfig --name basic-cluster 
+          kubectl apply -f deployment.yml
