--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+permissions:
+  id-token: write
+  contents: read 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -27,15 +29,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::676440373575:role/Github_Oidc
+          aws-region: us-east-1
 
       - name: Install Kubectl
         uses: azure/setup-kubectl@v3   
@@ -43,12 +41,12 @@ jobs:
           version: 'v1.21.3' 
         id: install  
 
-      - name: Configure aws creds
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+#      - name: Configure aws creds
+#        uses: aws-actions/configure-aws-credentials@v1
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: us-east-1
 
       - name: Login ECR
         uses: aws-actions/amazon-ecr-login@v1
@@ -63,14 +61,14 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
           docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}  
           
-      - name: Deploy the application
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: node-app 
-          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
-        run: |
-          DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
-          sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
-          echo ${{ secrets.KUBE_CONFIG_DATA_STAGING }} | base64 --decode > .kube/kube.config
-          kubectl --kubeconfig .kube/kube.config apply -f deployment.yml
+      #- name: Deploy the application
+      #  env:
+      #    REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #    REPOSITORY: node-app 
+      #    IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
+      #  run: |
+      #    DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+      #    sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
+      #    echo ${{ secrets.KUBE_CONFIG_DATA_STAGING }} | base64 --decode > .kube/kube.config
+      #    kubectl --kubeconfig .kube/kube.config apply -f deployment.yml
           
