--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         id: login-ecr   
 
-      - name: Build docker Image
+      - name: Build docker Image and Push
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: node-app 
@@ -61,14 +61,14 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
           docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}  
           
-      #- name: Deploy the application
-      #  env:
-      #    REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #    REPOSITORY: node-app 
-      #    IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
-      #  run: |
-      #    DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
-      #    sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
-      #    echo ${{ secrets.KUBE_CONFIG_DATA_STAGING }} | base64 --decode > .kube/kube.config
-      #    kubectl --kubeconfig .kube/kube.config apply -f deployment.yml
+      - name: Deploy the application
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: node-app 
+          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
+        run: |
+          DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+          sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
+          aws eks --region us-east-1 update-kubeconfig --name basic-cluster 
+          kubectl apply -f deployment.yml
           
