--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,13 @@ on:
   push:
     branches: [ "dev" ]
   pull_request:
-    branches: [ "main" ]
-
-  
+    branches: [ "main" ]  
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-permissions:
-  id-token: write
-  contents: read 
+#permissions:
+#  id-token: write
+#  contents: read 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -29,11 +27,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: arn:aws:iam::676440373575:role/Github_Oidc
-          aws-region: us-east-1
+     # - name: configure aws credentials
+     #   uses: aws-actions/configure-aws-credentials@v1
+     #   with:
+     #     role-to-assume: arn:aws:iam::676440373575:role/Github_Oidc
+     #     aws-region: us-east-1
 
       - name: Install Kubectl
         uses: azure/setup-kubectl@v3   
@@ -41,12 +39,12 @@ jobs:
           version: 'v1.21.3' 
         id: install  
 
-#      - name: Configure aws creds
-#        uses: aws-actions/configure-aws-credentials@v1
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws-region: us-east-1
+      - name: Configure aws creds
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
       - name: Login ECR
         uses: aws-actions/amazon-ecr-login@v1
@@ -59,9 +57,13 @@ jobs:
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
           docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
-          docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}  
+          docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
           
       - name: Deploy the application
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::676440373575:role/Github_Oidc
+          aws-region: us-east-1
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: node-app 
@@ -69,6 +71,11 @@ jobs:
         run: |
           DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
           sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
-          aws eks --region us-east-1 update-kubeconfig --name basic-cluster 
+          echo $HOME
+          mkdir $HOME/.kube/
+          cd mkdir $HOME/.kube/
+          touch config
+          echo ${{ secrets.KUBE_CONFIG_DATA_STAGING }} | base64 --decode > $HOME/.kube/config
+          cat $HOME/.kube/config
           kubectl apply -f deployment.yml
           
