--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
           docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
           
-      - name: Deploy the application
+      - name: Configure the deployment file
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: node-app 
@@ -57,13 +57,11 @@ jobs:
         run: |
           DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
           sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
-          echo $HOME
-          mkdir $HOME/.kube/
-          cd $HOME/.kube/
-          touch config
-          echo ${{ secrets.KUBE_CONFIG_DATA_STAGING }} | base64 --decode > $HOME/.kube/config
-          ls -la
-#          cd /home/runner/.kube
-#          ls
-#          kubectl apply -f deployment.yml
-          
+      
+      - name: Deploy the application     
+        uses: tale/kubectl-action@v1
+        with:
+          base64-kube-config: ${{ secrets.KUBE_CONFIG }}
+      - run: |
+          kubectl get node    
+          kubectl apply -f deployment.yml
