--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,15 @@ jobs:
         run: |
           docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
           docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
-          
+      - name: Scan the docker vulnerbalities
+        uses: anchore/scan-action@v3
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: node-app 
+          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
+        with:
+          image: "$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}"
+
       - name: Configure the deployment file
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
