--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,24 +40,24 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         id: login-ecr   
 
-      - name: Build docker Image and Push
+      - name: Build docker Image and Push and scan the Vulnerbality
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: node-app 
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
+          docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
+          docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
 
-           docker build -t localbuild/testimage:latest .
-           
-      - name: Scan the docker vulnerbalities
-        uses: anchore/scan-action@v3
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: node-app 
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         with:
-          image: "localbuild/testimage:latest"
-
+          image-ref: '$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}'    
+          
       - name: Configure the deployment file
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
