--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,19 +46,13 @@ jobs:
           REPOSITORY: node-app 
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
-          docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+          docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
+#          docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: node-app 
-          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
-        
-          DOCKER: $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}  
         with:
-          image-ref: '${{ env.DOCKER }}'    
+          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'    
           
       - name: Configure the deployment file
         env:
@@ -66,7 +60,7 @@ jobs:
           REPOSITORY: node-app 
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
-          DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+          DOCKER=docker.io/my-organization/my-app:${{ github.sha }}
           sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
       
       - name: Deploy the application     
