--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,15 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'    
+          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}' 
+      
+      - name: Build docker Image and Push and scan the Vulnerbality
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: node-app 
+          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
+        run: |
+          docker push docker.io/my-organization/my-app:${{ github.sha }}       
           
       - name: Configure the deployment file
         env:
