--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,8 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
+        env:
+          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         with:
           image-ref: 'node-app:${{ env.IMAGE_TAG }}' 
       
