--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,20 +41,14 @@ jobs:
         id: login-ecr   
 
       - name: Build docker Image 
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: node-app 
-          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
-          docker build -t node-app:${{ env.IMAGE_TAG }} .
+          docker build -t node-app:${{ github.sha }} .
 #          docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
-        env:
-          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         with:
-          image-ref: 'node-app:${{ env.IMAGE_TAG }}' 
+          image-ref: 'node-app:${{ github.sha }}' 
       
       - name: Build docker Image Push 
         env:
@@ -62,7 +56,7 @@ jobs:
           REGION: ${{ secrets.REGION }}
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
-          docker tag node-app:${{ env.IMAGE_TAG }} $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/node-app:${{ env.IMAGE_TAG }}      
+          docker tag node-app:${{ github.sha }} $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/node-app:${{ env.IMAGE_TAG }}      
           docker push $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/node-app:${{ env.IMAGE_TAG }}
 
       - name: Configure the deployment file
@@ -71,7 +65,7 @@ jobs:
           REPOSITORY: node-app 
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
-          DOCKER=docker.io/my-organization/my-app:${{ github.sha }}
+          DOCKER=node-app:${{ github.sha }}
           sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
       
       - name: Deploy the application     
