--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: Install Kubectl
-        uses: azure/setup-kubectl@v3   
-        with:
-          version: 'v1.21.3' 
-        id: install  
+#      - name: Install Kubectl
+#        uses: azure/setup-kubectl@v3   
+#        with:
+#          version: 'v1.21.3' 
+#        id: install  
 
       - name: Configure aws creds
         uses: aws-actions/configure-aws-credentials@v1
@@ -37,8 +37,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Login ECR
-        uses: aws-actions/amazon-ecr-login@v1
-        id: login-ecr   
+        uses: aws-actions/amazon-ecr-login@v1  
 
       - name: Build docker Image 
         run: |
@@ -60,10 +59,6 @@ jobs:
           docker push $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/node-app:${{ env.IMAGE_TAG }}
 
       - name: Configure the deployment file
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: node-app 
-          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
           DOCKER=node-app:${{ github.sha }}
           sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
