--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,34 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ github.sha }}
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
 
       - name: Push the Docker Image
         env: 
           REGISTRY: ${{ steps.login-ecr.outputs.registry}}
-        run: docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ github.sha }}      
+        run: docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ github.sha }}  
+      
+      - name: Configure the deployment file
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          DOCKER=${{ env.REGISTRY }}/${{ env.REPOSITORY }}:${{ github.sha }}
+          sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' deployment.yml
+      
+      - name: Deploy the application     
+        uses: tale/kubectl-action@v1
+        with:
+          base64-kube-config: ${{ secrets.KUBE_CONFIG }}
+      - run: |
+          kubectl get node    
+          kubectl apply -f deployment.yml
+
+
+
 #      - name: Build docker Image 
 #        run: |
 #          docker build -t node-app:${{ github.sha }} .
@@ -84,4 +107,4 @@ jobs:
 #      - run: |
 #          kubectl get node    
 #          kubectl apply -f deployment.yml
-#   
+   
