--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,23 @@
  steps:
  # Build the container image
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/hello:$COMMIT_SHA', '.']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/test-run:$COMMIT_SHA', '.']
  # Push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['push', 'gcr.io/$PROJECT_ID/hello:$COMMIT_SHA']
+   args: ['push', 'gcr.io/$PROJECT_ID/test-run:$COMMIT_SHA']
  # Deploy container image to Cloud Run
- - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-   entrypoint: gcloud
+ - name: 'gcr.io/cloud-builders/gcloud'
    args:
    - 'run'
    - 'deploy'
-   - 'hello'
+   - 'test-run'
    - '--image'
-   - 'gcr.io/$PROJECT_ID/hello:$COMMIT_SHA'
+   - 'gcr.io/$PROJECT_ID/test-run:$COMMIT_SHA'
    - '--region'
-   - 'REGION'
+   - 'us-central1'
+   - '--platform'
+   - 'managed'
+   - '--allow-unauthenticated'
  images:
- - 'gcr.io/$PROJECT_ID/hello:$COMMIT_SHA'
+ - 'gcr.io/$PROJECT_ID/test-run:$COMMIT_SHA'
 
